--- a/id-generation-api/pom.xml
+++ b/id-generation-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.ihtsdo.snomed.release.idgen</groupId>
 		<artifactId>id-generation-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.1</version>
 	</parent>
 
 	<artifactId>id-generation-api</artifactId>
