--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.ihtsdo.snomed.release.idgen</groupId>
 	<artifactId>id-generation-parent</artifactId>
-	<version>1.1</version>
+	<version>1.1.1</version>
 	<packaging>pom</packaging>
 
 	<name>ID Generation</name>
@@ -30,6 +30,25 @@
 			<version>4.11</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<distributionManagement>
 		<repository>
