--- a/data-service/src/main/resources/data-service-defaults.properties
+++ b/data-service/src/main/resources/data-service-defaults.properties
@@ -8,3 +8,6 @@ encryption.salt = 7aff989ff7dd09c5
 idGenerator.url = http://mgr.servers.aceworkspace.net:50002/axis2/services/id_generator
 releaseValidationFramework.url = https://uat-rvf.ihtsdotools.org/api/v1
 fileProcessing.failureMaxRetry = 3
+
+# Exporting files in parallel will be faster but take much more memory
+fileProcessing.multiThreadedExport = true
