Neater JMS setup and testing in telemetry module in prep for worker module.

--- a/telemetry/pom.xml
+++ b/telemetry/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>activemq-client</artifactId>
 			<version>${activemq.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-pool</artifactId>
+			<version>${activemq.version}</version>
+		</dependency>
 
 		<!-- S3 -->
 		<dependency>
