--- a/data-service/src/main/resources/data-service-defaults.properties
+++ b/data-service/src/main/resources/data-service-defaults.properties
@@ -39,19 +39,19 @@ telemetry.smtp.password = bar
 telemetry.smtp.host = replace_me.com
 telemetry.smtp.port = 443
 telemetry.smtp.ssl = true
-srs.jdbc.driverClassName = org.h2.Driver
-srs.jdbc.url = jdbc:h2:mem:srs;DB_CLOSE_DELAY=-1
-srs.jdbc.username = sa
-srs.jdbc.password =
-srs.hibernate.dialect = org.hibernate.dialect.HSQLDialect
-srs.environment.shortname=local
-
-#srs.jdbc.driverClassName = com.mysql.jdbc.Driver
-#srs.jdbc.url = jdbc:mysql://localhost:3306/srs
-#srs.jdbc.username = root
+#srs.jdbc.driverClassName = org.h2.Driver
+#srs.jdbc.url = jdbc:h2:mem:srs;DB_CLOSE_DELAY=-1
+#srs.jdbc.username = sa
 #srs.jdbc.password =
-#srs.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#srs.hibernate.dialect = org.hibernate.dialect.HSQLDialect
 #srs.environment.shortname=local
+
+srs.jdbc.driverClassName = com.mysql.jdbc.Driver
+srs.jdbc.url = jdbc:mysql://localhost:3306/srs
+srs.jdbc.username = root
+srs.jdbc.password =
+srs.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+srs.environment.shortname=local
 
 # By default start an embedded broker
 orchestration.jms.url=vm://localhost:61617
